--- a/data/config/language/en_UK_language_config.json
+++ b/data/config/language/en_UK_language_config.json
@@ -18,7 +18,7 @@
   "LoRA模型列表": "LoRA Model List",
   "使用deepspeed": "Use deepspeed",
   "模型参数": "Model Parameters",
-  "请可爱的风格回答下述问题。": "Please answer the following question in cute style: ",
+  "请用可爱的风格回答下述问题。": "Please answer the following question in cute style: ",
   "提示词": "Prompt",
   "确定": "Confirm",
   "*联网key:": "Search Engine Key",
@@ -108,6 +108,7 @@
   "创建新的知识库": "Create new vector store",
   "库名": "vector store name",
   "*嵌入式模型": "*Embedding model",
+  "嵌入式模型": "Embedding model",
   "添加文件(支持md、pdf、txt、csv格式)": "Add files(support md, pdf, txt and csv)",
   "生成知识库": "Generate vector store",
   "查询已有数据库内的文档": "Query documents in the vector store",
@@ -156,6 +157,5 @@
   "使用deepspeed(仅支持Linux)": "Use deepspeed(only for Linux)",
   "背景图": "Background Picture",
   "请上传要使用的背景图片": "Please Upload Background picture",
-  "流式输出": "Streaming",
-  "选择Chatbot": "Choose Chatbot"
+  "流式输出": "Streaming"
 }
